test/Spectre.Console.Cli.Tests/Expectations/Parsing/UnknownCommand/Test_4.Output.verified.txt
Error: Unknown command 'bat'.

       bat 14
       ^^^ Did you mean 'cat'?